frontend/test/should_pass/exectype_VFreeUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(vfree(i));
	}
}